--- a/application/views/scripts/certifications/listecertification.phtml
+++ b/application/views/scripts/certifications/listecertification.phtml
@@ -1,4 +1,8 @@
+<?php
+	echo $this->placeholder('menu-connecte');
+?>
 <h1>Liste des Certifications</h1>
+<h5 class="h5_modifie">Certifications disponibles</h5>
 <?php
 	echo $this->lien;
 ?>
