--- a/application/views/scripts/utilisateurs/parcoursformateur.phtml
+++ b/application/views/scripts/utilisateurs/parcoursformateur.phtml
@@ -1,3 +1,6 @@
+<?php
+	echo $this->placeholder('sidebar');
+?>
 <h1>Renseigner son profil formateur</h1>
 <div id="etapes">
 	<div id="etape1" class="etape">
@@ -13,7 +16,7 @@
 		Etape 3
 	</div>
 </div>
-<?php 
+<?php
 	// Si il n'as pas encore passé la certification pédagogique
 	if($this->certification_pedagogique){
 		?>
