--- a/application/views/scripts/certifications/passercertification.phtml
+++ b/application/views/scripts/certifications/passercertification.phtml
@@ -1,4 +1,5 @@
 <h1>Passage de certification</h1>
+<p><?php echo $this->navigation()->breadcrumbs()->setSeparator(' > '); ?></p>
 <div id="nom_certification">
 <?php
     echo "<h4 class='h5_modifie'>$this->nom_certification</h4>"
