--- a/application/views/scripts/utilisateurs/changepassword.phtml
+++ b/application/views/scripts/utilisateurs/changepassword.phtml
@@ -1,4 +1,4 @@
-
+<p><?php echo $this->navigation()->breadcrumbs()->setSeparator(' > '); ?></p>
 
 <h5 class="h5_modifie">Changer de mot de passe </h2>
 <div id="label_changePassword">
@@ -12,7 +12,7 @@
 	<input type="password" name="confirmation" id="confirmation" value="">	
 </div> <!-- input_changePassword -->
 
-<input type="submit" name="submit" id="submit_changePassword" value="Valider"><input type="submit" name="cancel" id="cancel_changePassword" value="Annuler">
+<input type="submit" name="submit" id="submit_changePassword" value="Valider"><input type="submit" name="cancel" onclick="javascript:history.back()" value="Annuler">
 
 <p id="error_changePassword" style="color: red;display : none;"></p>
 <p id="info_changePassword" style="color: green;display : none;"></p>
