--- a/application/views/scripts/utilisateurs/menu-connecte.phtml
+++ b/application/views/scripts/utilisateurs/menu-connecte.phtml
@@ -1,5 +1,8 @@
-<?php $this->placeholder('menu-connecte')->captureStart();
-echo $this->navigation()->breadcrumbs()->setSeparator(" -> "); ?>
+<?php 
+$user = new Zend_Session_Namespace('user');
+$this->placeholder('menu-connecte')->captureStart();
+if($user->id_groupe == 1){
+?>
 <div id="menu-connecte">
 	    <li><a href="/profil-utilisateur">Profil</a></li>
 	    <li><a>Actions utilisateurs</a>
@@ -12,17 +15,32 @@ echo $this->navigation()->breadcrumbs()->setSeparator(" -> "); ?>
 	    </li>
 	    <li><a>Autres actions</a>
 	        <ul>
-				<li><a href="/groupe">Liste des groupes</a></li>
-	            <li><a href="/questions">Liste des questions</a></li>
-	            <li><a href="/certifications">Liste des certifications</a></li>
-	            <li><a href="/formation/listeformation">Liste des formations</a></li>
-	            <li><a href="/questions/listequestionmotivation">Liste des questions de motivation</a></li>
-	            <li><a href="/logininterdit">Liste des logins interdit</a></li>
-	            <li><a href="/faq/gestion">Gérer la FAQ</a></li>
+				<li><a href="/liste-des-groupes">Liste des groupes</a></li>
+	            <li><a href="/liste-des-questions">Liste des questions</a></li>
+	            <li><a href="/liste-des-certifications">Liste des certifications</a></li>
+	            <li><a href="/liste-des-formations">Liste des formations</a></li>
+	            <li><a href="/liste-questions-motivation">Liste des questions de motivation</a></li>
+	            <li><a href="/liste-logins-interdits">Liste des logins interdit</a></li>
+	            <li><a href="/gerer-faq">Gérer la FAQ</a></li>
 	        </ul>
 	    </li>
 	    <li><a id="deconnexion_menu">Deconnexion</a></li>
 </div> <!-- menu-connecte -->
+<p><?php echo $this->navigation()->breadcrumbs()->setSeparator(' > '); ?></p>
+<?php
+}else{
+?>
+<div id="menu-connecte">
+	    <li><a href="/profil-utilisateur">Profil</a></li>
+	    <li><a href="/certification-disponible">Passer une certification</a></li>
+	    <li><a href="/formations-disponible">Formations disponibles</a></li>
+   	    <li><a href="/mes-formations">Mes formations</a>
+	    <li><a id="deconnexion_menu">Deconnexion</a></li>
+</div> <!-- menu-connecte -->
+<p><?php echo $this->navigation()->breadcrumbs()->setSeparator(' > '); ?></p>
+<?php 
+}
+?>
 <script type="text/javascript">
 	$(document).ready(function(){
 	
