--- a/application/views/scripts/utilisateurs/sidebar.phtml
+++ b/application/views/scripts/utilisateurs/sidebar.phtml
@@ -1,36 +1,63 @@
 <?php 
 $user = new Zend_Session_Namespace('user');
-$this->placeholder('sidebar')->captureStart()?>
-<div id="sidebar">
-	<div id="login_div" >
-	  	<div id="isNotLogged">
-			<h2 >Connexion utilisateur</h2>
-			<form action="" id="form2">
-				<div class="h3 "><input id="login_top" type="text" class="input2" />Nom d'utilisateur:</div>
-				<div class="h3 "><input id="password_top" type="password" class="input2" />Mot de passe:</div>
-				<p class=""><button href="#" class="fright button" onClick="return false;" id="submitLogin">Valider</button> <input type="checkbox" id="remember" class="input3" /> &nbsp;Se souvenir de moi</p>
-				<br /><a href="#" class="link1" style="color : white;">Mot de passe oublié?</a><br />
-			</form>
-			<br /><p id="erreur" style="color : red;"></p>
-	   	</div> <!-- isNotLogged -->
-		<div id="isLogged" style="display : none;">
-			<p id="userHello">Bonjour <?php echo $user->login;?> </p>
-			<a href="#" id="votreCompte" onClick='return false;'>Votre compte</a> / <a href="#" id="deconnexion" onClick="return false;">Deconnexion</a>
-		</div> <!-- isLogged -->
-	</div> <!-- login_div -->
-	<div id="col-droite-profil">         
-	    <?php
-			if($this->profil_inactif == ""){					
-				// Si l'utilisateur n'est pas actif on n'affiche pas les options de profil
-				//echo "<br /><a href=".$this->url(array('controller' => 'utilisateurs', 'action' => 'deconnexion'), 'default', true).">Deconnexion</a>";
-			
-			    echo "<br /><a href=".$this->url(array('controller' => 'utilisateurs', 'action' => 'afficherinfo'), 'default', true).">Voir mon profil</a>";
-			    
-			    echo "<br /><a href=".$this->url(array('controller' => 'utilisateurs', 'action' => 'voirdocument'), 'default', true).">Voir mes documents</a>";
-			
-				echo "<br /><a href=".$this->url(array('controller' => 'utilisateurs', 'action' => 'changepassword'), 'default', true).">Changer mon mot de passe</a>";
-			}
+$this->placeholder('sidebar')->captureStart();
+	if($user->id_groupe == 3)
+		echo "<div id='sidebar_parcour'>";
+	else if($user->id_groupe == 2)
+		echo "<div id='sidebar_formateur'>";
+	else 
+		echo '<div id="sidebar">';
+?>
+	<h2>Espace privé</h2>
+	<div id="isNotLogged">
+		<form action="" id="form-espace-prive" class="form-espace-prive">
+			<fieldset class="fieldset-espace-prive">
+				<p>
+					<label for="login" class="text">Utilisateur : </label>
+					<input type="text" name="login" id="login" value="Votre nom d'utilisateur" onblur="if(this.value=='') this.value='Votre nom d\'utilisateur'" onfocus="if(this.value =='Votre nom d\'utilisateur' ) this.value=''">
+				</p>
+				<p>
+					<label for="password" class="text">Mot de passe : </label>
+					<input type="password" name="password" id="password" value="Votre mot de passe" onblur="if(this.value=='') this.value='Votre mot de passe'" onfocus="if(this.value =='Votre mot de passe' ) this.value=''">
+				</p>
+				<p>
+					<input type="checkbox" id="remember">
+					<label for="remember"> Se souvenir de moi</label>
+					<br><a href="">Mot de passe oublié</a>
+				</p>
+				<p>
+					
+					<button class="button" onclick="return false;" id="submitLogin">Connexion</button>
+				</p>
+			</fieldset>
+		</form>
+	</div> <!-- isNotLogged -->
+	<div id="isLogged" style="display : none;">
+		<p id="userHello">Bonjour <?php echo $user->login;?> </p>
+		<a href="#" id="votreCompte" onClick='return false;'>Votre compte</a> / <a href="#" id="deconnexion" onClick="return false;">Deconnexion</a>
+		<br />
+		<?php
+		if($this->profil_inactif == ""){					
+			// Si l'utilisateur n'est pas actif on n'affiche pas les options de profil
+			//echo "<br /><a href=".$this->url(array('controller' => 'utilisateurs', 'action' => 'deconnexion'), 'default', true).">Deconnexion</a>";
+		
+		    echo "<br /><a href='/information-utilisateur'>Voir mon profil</a>";
+		    
+		   // echo "<br /><a href=".$this->url(array('controller' => 'utilisateurs', 'action' => 'voirdocument'), 'default', true).">Voir mes documents</a>";
+		
+			echo "<br /><a href='changer-mot-de-passe'>Changer mon mot de passe</a>";
+		}
 		?>
-	</div> <!-- col-droite-profil -->
+	</div> <!-- isLogged -->
+	<div id="navigation-content">
+		
+			<h2 class="crayon article-titre-8 titre">Recrutement des formateurs : faites-nous confiance</h2>
+			<div class="crayon article-texte-8 texte"><p><span class="spip_document_9 spip_documents spip_documents_left" style="float:left; width:100px;">
+	<img src="/images/81-fcfa9.png" width="100" height="112" alt="" style="height:112px;width:100px;"></span>Pour vous proposer les intervenants les plus compétents qui se déplaceront à votre domicile, Easylia sélectionne avec attention ses formateurs et applique un processus de recrutement strict. Découvrez ici notre méthode de sélection.</p></div>
+		
+			<h2 class="crayon article-titre-7 titre">Liens divers</h2>
+			<div class="crayon article-texte-7 texte"><ul class="spip"><li><a href="foire-aux-questions" class="spip_ancre">Une question&nbsp;? Direction la FAQ&nbsp;!</a></li><li><a href="#" class="spip_ancre">Tout savoir sur les avantages fiscaux liés aux services à la personne.</a></li></ul></div>
+	</div> <!-- navigation-content -->
 </div> <!-- sidebar -->
+
 <?php $this->placeholder('sidebar')->captureEnd() ?>
