--- a/application/views/scripts/utilisateurs/parcoursformateur.phtml
+++ b/application/views/scripts/utilisateurs/parcoursformateur.phtml
@@ -27,28 +27,25 @@
 			</p>	
 		<?php
 	}else{
+
+	if($this->waiting == ""){
 ?>
 <p>Veuillez remplir les formalitées détaillés dans chaque onglets, afin que un administrateur puisse consulter et valider votre profil</p>
-
-<?php 
-	if($this->waiting != ""){
-		echo "<p style='color : green'>Vous avez déjà remplis toutes les formalitées. Un administrateur validera votre profil après vérification.</p>";
-	}
-?>
 <div id="contenaire_onglets">
 	<ul>
 		<li><a href="#cv" id="onglet_cv">Curriculum Vitae</a></li>
 <!-- 		<li><a href="#rib" id="onglet_rib">Relevé d'identité bancaire</a></li> -->
 		<li><a href="#lettre" id="onglet_motivation">Lettre de motivation</a></li>
+		<li><a href="#casier" id="onglet_casier">Extrait de casier judiciaire</a></li>
 		<li><a href="#test_motivation" id="onglet_test_motivation">Test de motivation</a></li>
-		<li><a href="#entretien_skype" id="onglet_entretien_skype">Entretien de motivation skype</a></li>
+<!-- 		<li><a href="#entretien_skype" id="onglet_entretien_skype">Entretien de motivation skype</a></li> -->
 	</ul>
 	<div id="cv">
 		<?php
 			if(!$this->cv){
 		?>
 		<p>
-			Vous devez uploadé votre Curriculum Vitae.<br />
+			Vous devez envoyer votre Curriculum Vitae.<br />
 			Les documents de type pdf et Word sont acceptés. ils doivent avoir une taille maximum de 500 Mo.
 		</p>
 		<p id="upload_cv">
@@ -62,34 +59,10 @@
 				echo "<p id='info_cv' style='display : none; color : green'></p>";
 				echo "<p id='error_cv' style='display : none; color : red'></p>";
 			}else
-				echo "<span style='color : green'>Vous avez déjà uploadé votre Curriculum Vitae</span>";
+				echo "<span style='color : green'>Vous avez déjà envoyé votre Curriculum Vitae</span>";
 		?>
 		</p>
 	</div>
-	<!--
-<div id="rib">
-		<?php /* if(!$this->rib){ */?>
-		<p>
-			Vous devez uploadé votre relevé d'identité bancaire.<br />
-			Les documents de type pdf et Word sont acceptés. ils doivent avoir une taille maximum de 500 Mo.
-		</p>
-		<?php
-/*
-				echo "<form target='rib_target' id='rib_target' action='/document/upload' enctype='multipart/form-data' method='post'>";
-				echo "<input id='rib_file' name='rib_file' type='file' ><br />";
-				echo "<input type='hidden' id='type' name='type' value='rib' >";
-				echo "<input id='rib_envoyer' type='submit' value='Envoyer'/>";
-				echo "</form>";
-				echo "<iframe id='rib_target' name='rib_target' src='#' style='width:0;height:0;border:0px solid #fff;'></iframe>";
-				echo "<p id='info_rib' style='display : none; color : green'></p>";
-				echo "<p id='error_rib' style='display : none; color : red'></p>";
-			}else
-				echo "<span style='color : green'>Vous avez déjà uploadé votre relevé d'identité bancaire</span>";
-*/
-
-		?>
-	</div>
--->
 	<div id="lettre">
 		<?php if(!$this->lettre){?>
 		<p>
@@ -109,6 +82,29 @@
 				echo "<span style='color : green'>Vous avez déjà envoyé votre lettre de motivation</span>";
 		?>
 	</div>
+	<div id="casier">
+		<?php
+			if(!$this->casier){
+		?>
+		<p>
+			Vous devez envoyer votre extrait de casier judiciaire.<br />
+			Les documents de type pdf et Word sont acceptés. ils doivent avoir une taille maximum de 500 Mo.
+		</p>
+		<p id="upload_cv">
+		<?php
+				echo "<form target='casier_target' id='casier_target' action='/document/upload' enctype='multipart/form-data' method='post'>";
+				echo "<input id='casier_file' name='casier_file' type='file' ><br />";
+				echo "<input type='hidden' id='type' name='type' value='casier' >";
+				echo "<input id='casier_envoyer' type='submit' value='Envoyer'/>";
+				echo "</form>";
+				echo "<iframe id='casier_target' name='casier_target' src='#' style='width:0;height:0;border:0px solid #fff;'></iframe>";
+				echo "<p id='info_casier' style='display : none; color : green'></p>";
+				echo "<p id='error_casier' style='display : none; color : red'></p>";
+			}else
+				echo "<span style='color : green'>Vous avez déjà envoyé votre extrait de casier judiciaire</span>";
+		?>
+		</p>
+	</div> <!-- casier -->
 	<div id="test_motivation">
 		<?php if(!$this->test_motivation){ ?>
 		<p>
@@ -128,6 +124,9 @@
 			echo "<span style='color : green'>Vous avez déjà passé le test de motivation</span>";
 		?>
 	</div> <!-- test_motivation -->
+</div> <!-- contenaire_onglets -->
+	<?php }else{ ?>
+<!-- 	Etape 3 entretien skype -->
 	<div id="entretien_skype">
 		<?php 
 			if($this->entretien_skype){
@@ -138,15 +137,15 @@
 			Vous devez passer un entretien oral via la plateforme de communication skype.<br />			
 			Veuillez rentrer votre adresse Skype afin que vous puissiez être contacté.<br />
 			<label for="adresse_skype">Nom d'utilisateur Skype : </label><input type="text" id="adresse_skype" value="<?php echo $this->adresse_skype?>"/><br />
-			
+			<br /><span id="dispo_rentree" style='color : green; display : none'>Vos disponibilitées on été enregistrés</span>
 			<?php 
 				if(!$this->disponibilite){			
 			?>		
 			<div class="separateur"></div>
-			<p>Je choisis les jours et les heures où je suis disponible pour mon entretien <a title="Un clic sur le nom du jour sélectionne toute la journée"><img src="<?php APPLICATION_PATH?>/images/aide-point-interrogation-soutien-icone-4653-16.png" /></a></p><br />
 				<div id="select_jour_parcour">
+					<p>Je choisis les jours et les heures où je suis disponible pour mon entretien <a title="Un clic sur le nom du jour sélectionne toute la journée"><img src="<?php APPLICATION_PATH?>/images/aide-point-interrogation-soutien-icone-4653-16.png" /></a></p><br />
 					<div id="jour1" class="select_horaire" >
-						<span class="span_jour"></span>
+						<span class="span_jour_parcour"></span>
 						
 						<div id="checkbox_heures1" class="div_checkbox_parcour" style="display : inline">
 							<input type="checkbox" id="1" value="8h"/><label for="1" class="button_commande">8h</label>
@@ -169,7 +168,7 @@
 					</div>
 					<br />
 					<div id="jour2" class="select_horaire">
-						<span class="span_jour"></span>
+						<span class="span_jour_parcour"></span>
 						
 						<div id="checkbox_heures2" class="div_checkbox_parcour" style="display : inline">
 							<input type="checkbox" id="11" value="8h"/><label for="11" class="button_commande">8h</label>
@@ -191,7 +190,7 @@
 					</div>
 					<br />
 					<div id="jour3" class="select_horaire">
-						<span class="span_jour"></span>
+						<span class="span_jour_parcour"></span>
 						
 						<div id="checkbox_heures3" class="div_checkbox_parcour" style="display : inline">
 							<input type="checkbox" id="21" value="8h"/><label for="21" class="button_commande">8h</label>
@@ -213,7 +212,7 @@
 					</div>
 					<br />
 					<div id="jour4" class="select_horaire">
-						<span class="span_jour"></span>
+						<span class="span_jour_parcour"></span>
 						
 						<div id="checkbox_heures4" class="div_checkbox_parcour" style="display : inline">
 							<input type="checkbox" id="31" value="8h"/><label for="31" class="button_commande">8h</label>
@@ -235,7 +234,7 @@
 					</div>
 					<br />
 					<div id="jour5" class="select_horaire">
-						<span class="span_jour"></span>
+						<span class="span_jour_parcour"></span>
 						
 						<div id="checkbox_heures5" class="div_checkbox_parcour" style="display : inline">
 							<input type="checkbox" id="41" value="8h"/><label for="41" class="button_commande">8h</label>
@@ -257,7 +256,7 @@
 					</div>
 					<br />
 					<div id="jour6" class="select_horaire">
-						<span class="span_jour"></span>
+						<span class="span_jour_parcour"></span>
 						
 						<div id="checkbox_heures6" class="div_checkbox_parcour" style="display : inline">
 							<input type="checkbox" id="51" value="8h"/><label for="51" class="button_commande">8h</label>
@@ -279,7 +278,7 @@
 					</div>
 					<br />  
 					<div id="jour7" class="select_horaire">
-						<span class="span_jour"></span>
+						<span class="span_jour_parcour"></span>
 						
 						<div id="checkbox_heures7" class="div_checkbox_parcour" style="display : inline">
 							<input type="checkbox" id="61" value="8h"/><label for="61" class="button_commande">8h</label>
@@ -303,7 +302,7 @@
 					<br />
 					<div id="next_periode" style="display : none">
 						<div id="jour8" class="select_horaire" >
-							<span class="span_jour"></span>
+							<span class="span_jour_parcour"></span>
 							
 							<div id="checkbox_heures8" class="div_checkbox_parcour" style="display : inline">
 								<input type="checkbox" id="71" value="8h"/><label for="71" class="button_commande">8h</label>
@@ -325,7 +324,7 @@
 						</div>
 						<br />
 						<div id="jour9" class="select_horaire">
-							<span class="span_jour"></span>
+							<span class="span_jour_parcour"></span>
 							
 							<div id="checkbox_heures9" class="div_checkbox_parcour" style="display : inline">
 								<input type="checkbox" id="81" value="8h"/><label for="81" class="button_commande">8h</label>
@@ -347,7 +346,7 @@
 						</div>
 						<br />
 						<div id="jour10" class="select_horaire">
-							<span class="span_jour"></span>
+							<span class="span_jour_parcour"></span>
 							
 							<div id="checkbox_heures10" class="div_checkbox_parcour" style="display : inline">
 								<input type="checkbox" id="91" value="8h"/><label for="91" class="button_commande">8h</label>
@@ -369,7 +368,7 @@
 						</div>
 						<br />
 						<div id="jour11" class="select_horaire">
-							<span class="span_jour"></span>
+							<span class="span_jour_parcour"></span>
 							
 							<div id="checkbox_heures11" class="div_checkbox_parcour" style="display : inline">
 								<input type="checkbox" id="101" value="8h"/><label for="101" class="button_commande">8h</label>
@@ -391,7 +390,7 @@
 						</div>
 						<br />
 						<div id="jour12" class="select_horaire">
-							<span class="span_jour"></span>
+							<span class="span_jour_parcour"></span>
 							
 							<div id="checkbox_heures12" class="div_checkbox_parcour" style="display : inline">
 								<input type="checkbox" id="111" value="8h"/><label for="111" class="button_commande">8h</label>
@@ -413,7 +412,7 @@
 						</div>
 						<br />
 						<div id="jour13" class="select_horaire">
-							<span class="span_jour"></span>
+							<span class="span_jour_parcour"></span>
 							
 							<div id="checkbox_heures13" class="div_checkbox_parcour" style="display : inline">
 								<input type="checkbox" id="121" value="8h"/><label for="121" class="button_commande">8h</label>
@@ -435,7 +434,7 @@
 						</div>
 						<br />  
 						<div id="jour14" class="select_horaire">
-							<span class="span_jour"></span>
+							<span class="span_jour_parcour"></span>
 							
 							<div id="checkbox_heures14" class="div_checkbox_parcour" style="display : inline">
 								<input type="checkbox" id="131" value="8h"/><label for="131" class="button_commande">8h</label>
@@ -456,13 +455,13 @@
 							</div>
 						</div>
 					</div>
+					<input type="submit" id="plus" value="Afficher sept jours supplémentaires" />
+					<input type="submit" id="send_adresse_skype" />
 				</div> <!-- select_jour -->
-				<input type="submit" id="plus" value="Afficher sept jours supplémentaires" />
-				<input type="submit" id="send_adresse_skype" />
 				<?php
 					}else{
 						echo "<input type='submit' id='send_adresse_skype' /><br />";
-						echo "<span style='color : green'>Vous avez déjà rentré vos disponibilitées, un administrateur vous contactera sur un des crénaux que vous avez rentré</span>";
+						echo "<br /><span style='color : green'>Vous avez déjà enregistré vos disponibilitées,<br /> un administrateur vous contactera sur un des crénaux que vous avez saisis</span>";
 					}
 				?>
 				</p>
@@ -470,20 +469,20 @@
 			}
 		?>
 	</div>	<!-- entretien_skype -->
-	
+	<?php } ?>
 	<span id="loading" style="margin-left : 2em;"></span>
-</div> <!-- contenaire_onglets -->
 <?php 
 	}
 ?>
 <div id="confirmer_fini" style="display : none">En validant ces questions, celles-ci seront envoyées. Vous ne pourrez plus les modifier. <br />Etes vous sur ? </div>
 <input type="hidden" id="cv_value" value="<?php echo $this->cv?>" />
-<input type="hidden" id="rib_value" value="<?php echo $this->rib?>" />
+<input type="hidden" id="casier_value" value="<?php echo $this->casier?>" />
 <input type="hidden" id="lettre_value" value="<?php echo $this->lettre?>" />
 <input type="hidden" id="test_value" value="<?php echo $this->test_motivation?>" />
 <input type="hidden" id="entretien_skype_value" value="<?php echo $this->entretien_skype?>" />
 <input type="hidden" id="id_utilisateur" value="<?php echo $this->id_utilisateur?>" />
 <input type="hidden" id="id_certification" value="<?php echo $this->certification_pedagogique?>" />
+<input type="hidden" id="waiting" value="<?php echo $this->waiting?>" />
 <script language="javascript" type="text/javascript">
 	$(document).ready(function(){
 
@@ -492,22 +491,26 @@
 			$("#etape1 > span").html('<img src="/images/etape_debut_green.png" />');
 			$("#etape2 > span").html('<img src="/images/etape_inter_grey.png" />');
 			$("#etape3 > span").html('<img src="/images/etape_inter_grey.png" />');
-		}else{
+		}else if($('#waiting').val() == ""){
 			$("#etape1 > span").html('<img src="/images/etape_debut_grey.png" />');
 			$("#etape2 > span").html('<img src="/images/etape_inter_green.png" />');
 			$("#etape3 > span").html('<img src="/images/etape_inter_grey.png" />');
+		}else{
+			$("#etape1 > span").html('<img src="/images/etape_debut_grey.png" />');
+			$("#etape2 > span").html('<img src="/images/etape_inter_grey.png" />');
+			$("#etape3 > span").html('<img src="/images/etape_inter_green.png" />');
 		}
 	
 		// Paramétrage et affichage du choix des heures pour l'entretien skype
 		setDate();
 		
 		// Affiche une main au survol du nom des jours
-		$(".span_jour").hover(function(){
+		$(".span_jour_parcour").hover(function(){
 			$(this).css('cursor','pointer');
 		});
 		
 		var selected;
-		$(".span_jour").click(function(){
+		$(".span_jour_parcour").click(function(){
 			if(selected){
 				$(this).next('div').children('label').removeClass("ui-state-active").attr('aria-pressed', 'false');
 				selected = false;
@@ -525,7 +528,7 @@
 		});
 
 	
-		$('#cv_target, #rib_target, #lettre_target').submit(function(){
+		$('#cv_target, #casier_target, #lettre_target').submit(function(){
 			$('#loading').html("<img src='/images/loading.gif' /> Envoi en cours...");
 		});
 		// On selectionne le premier tab en fonction de l'avancement		
@@ -536,10 +539,9 @@
 		}
 		else if($('#lettre_value').val() != 1){
 			numero_tab_selected = 1;
-		}
-		else if($('#test_value').val() != 1){
+		}else if($("#casier_value").val() != 1){
 			numero_tab_selected = 2;
-		}else if($("#entretien_skype_value").val() != 1){
+		}else if($('#test_value').val() != 1){
 			numero_tab_selected = 3;
 		}else
 			numero_tab_selected = 0;
@@ -557,6 +559,8 @@
 			$('#onglet_motivation').addClass('etape_valide');
 		if($('#test_value').val() == 1)
 			$('#onglet_test_motivation').addClass('etape_valide');
+		if($('#casier_value').val() == 1)
+			$('#onglet_casier').addClass('etape_valide');
 			
 		// On affiche le premier élément du test de motivation
         $("#motivation_test :first-child").addClass('active');
@@ -631,7 +635,13 @@
         	$.ajax({
         		type : 'post',
         		url : '/utilisateurs/edituser',
-        		data : {'id_utilisateur' : $('#id_utilisateur').val(), 'adresseSkype': $('#adresse_skype').val(), 'DisponibiliteEntretien' : disponibilite}
+        		data : {'id_utilisateur' : $('#id_utilisateur').val(), 'adresseSkype': $('#adresse_skype').val(), 'DisponibiliteEntretien' : disponibilite},
+        		success: function(){
+        			$('#select_jour_parcour').hide();
+        			$('.separateur').hide();
+        			$('#dispo_rentree').show();
+        			$('#adresse_skype').val($('#adresse_skype').val());
+        		}
         	});
         });
         
