Modification du texte du bouton valider etape 3

--- a/application/views/scripts/utilisateurs/parcoursformateur.phtml
+++ b/application/views/scripts/utilisateurs/parcoursformateur.phtml
@@ -415,7 +415,7 @@ Nous acceptons les formats PDF, JPG, PNG et BMP, de moins de 10 Mo
 					</div> <!-- select_jour -->
 					<?php
 						}else{
-							echo "<input type='submit' id='send_adresse_skype' /><br />";
+							echo "<input type='submit' id='send_adresse_skype' value='valider' /><br />";
 							echo "<br /><span style='color : green'>Vous avez déjà enregistré vos disponibilitées,<br /> un administrateur vous contactera sur un des crénaux que vous avez saisis</span>";
 						}
 					?>
