--- a/application/views/scripts/utilisateurs/parcoursformateur.phtml
+++ b/application/views/scripts/utilisateurs/parcoursformateur.phtml
@@ -44,75 +44,81 @@ Dans un quatrième temps, nous vous inviterons à répondre à quelques question
 		<ul>
 			<li><a href="#cv" id="onglet_cv">Curriculum Vitae</a></li>
 	<!-- 		<li><a href="#rib" id="onglet_rib">Relevé d'identité bancaire</a></li> -->
-			<li><a href="#lettre" id="onglet_motivation">Lettre de motivation</a></li>
-			<li><a href="#casier" id="onglet_casier">Extrait de casier judiciaire</a></li>
+			<li><a href="#upload_lettre" id="onglet_motivation">Lettre de motivation</a></li>
+			<li><a href="#upload_casier" id="onglet_casier">Extrait de casier judiciaire</a></li>
 			<li><a href="#test_motivation" id="onglet_test_motivation">Test de motivation</a></li>
 	<!-- 		<li><a href="#entretien_skype" id="onglet_entretien_skype">Entretien de motivation skype</a></li> -->
 		</ul>
 		<div id="cv">
-			<?php
-				if(!$this->cv){
-			?>
-			<p>
-				Vous devez ici nous envoyer en ligne votre curriculum vitæ. Au travers de ce document, nous ne souhaitons pas évaluer votre expérience professionnelle, mais uniquement votre professionnalisme à rédiger ce type de documents. <br />
-Nous acceptons les formats PDF, DOC et DOCX, de moins de 10 Mo
-			</p>
-			<p id="upload_cv">
-			<?php
-					echo "<form target='cv_target' id='cv_target' action='/document/upload' enctype='multipart/form-data' method='post'>";
-					echo "<input id='cv_file' style='width: 25em;' name='cv_file' type='file' ><br />";
-					echo "<input type='hidden' id='type' name='type' value='cv' >";
-					echo "<input id='cv_envoyer' type='submit' value='Envoyer'/>";
-					echo "</form>";
-					echo "<iframe id='cv_target' name='cv_target' src='#' style='width:0;height:0;border:0px solid #fff;'></iframe>";
-					echo "<p id='info_cv' style='display : none; color : green'></p>";
-					echo "<p id='error_cv' style='display : none; color : red'></p>";
-				}else
-					echo "<span style='color : green'>Vous avez déjà envoyé votre Curriculum Vitae</span>";
-			?>
-			</p>
+			<div id="form_cv">
+				<?php
+					if(!$this->cv){
+				?>
+				<p>
+					Vous devez ici nous envoyer en ligne votre curriculum vitæ. Au travers de ce document, nous ne souhaitons pas évaluer votre expérience professionnelle, mais uniquement votre professionnalisme à rédiger ce type de documents. <br />
+	Nous acceptons les formats PDF, DOC et DOCX, de moins de 10 Mo
+				</p>
+				<p id="upload_cv">
+				<?php
+						echo "<form target='cv_target' id='cv_target' action='/document/upload' enctype='multipart/form-data' method='post'>";
+						echo "<input id='cv_file' style='width: 25em;' name='cv_file' type='file' ><br />";
+						echo "<input type='hidden' id='type' name='type' value='cv' >";
+						echo "<input id='cv_envoyer' type='submit' value='Envoyer'/>";
+						echo "</form>";
+						echo "<iframe id='cv_target' name='cv_target' src='#' style='width:0;height:0;border:0px solid #fff;'></iframe>";
+						echo "<p id='error_cv' style='display : none; color : red'></p>";
+					}else
+						echo "<span style='color : green'>Vous avez déjà envoyé votre Curriculum Vitae</span>";
+				?>
+				</p>
+			</div> <!-- form_cv -->
+			<p id="info_cv" style='color : green'></p>
 		</div>
-		<div id="lettre">
-			<?php if(!$this->lettre){?>
-			<p>
-				Vous devez ici nous envoyer en ligne votre lettre de motivation. <br />
-				Nous acceptons les formats PDF, DOC et DOCX, de moins de 10 Mo
-			</p>
-			<?php
-					echo "<form target='motivation_target' id='lettre_target' action='/document/upload' enctype='multipart/form-data' method='post'>";
-					echo "<input id='motivation_file' style='width: 25em;' name='motivation_file' type='file' ><br />";
-					echo "<input type='hidden' id='type' name='type' value='motivation' >";
-					echo "<input id='motivation_envoyer' type='submit' value='Envoyer'/>";
-					echo "</form>";
-					echo "<iframe id='motivation_target' name='motivation_target' src='#' style='width:0;height:0;border:0px solid #fff;'></iframe>";
-					echo "<p id='info_motivation' style='display : none; color : green'></p>";
-					echo "<p id='error_motivation' style='display : none; color : red'></p>";
-				}else
-					echo "<span style='color : green'>Vous avez déjà envoyé votre lettre de motivation</span>";
-			?>
+		<div id="upload_lettre">
+			<div id="form_lettre">
+				<?php if(!$this->lettre){?>
+				<p>
+					Vous devez ici nous envoyer en ligne votre lettre de motivation. <br />
+					Nous acceptons les formats PDF, DOC et DOCX, de moins de 10 Mo
+				</p>
+				<?php
+						echo "<form target='motivation_target' id='lettre_target' action='/document/upload' enctype='multipart/form-data' method='post'>";
+						echo "<input id='motivation_file' style='width: 25em;' name='motivation_file' type='file' ><br />";
+						echo "<input type='hidden' id='type' name='type' value='motivation' >";
+						echo "<input id='motivation_envoyer' type='submit' value='Envoyer'/>";
+						echo "</form>";
+						echo "<iframe id='motivation_target' name='motivation_target' src='#' style='width:0;height:0;border:0px solid #fff;'></iframe>";
+						echo "<p id='error_motivation' style='display : none; color : red'></p>";
+					}else
+						echo "<span style='color : green'>Vous avez déjà envoyé votre lettre de motivation</span>";
+				?>
+			</div> <!-- form_lettre -->
+			<p id="info_motivation" style='color : green'></p>
 		</div>
-		<div id="casier">
-			<?php
-				if(!$this->casier){
-			?>
-			<p>
-				Vous devez ici nous envoyer en ligne votre extrait de casier judiciaire (bulletin n°3 ; vous pouvez l'obtenir en ligne sur le site <a target="_blank" href="https://www.cjn.justice.gouv.fr/cjn/b3/eje20">www.cjn.justice.gouv.fr</a>).<br />
-Nous acceptons les formats PDF, JPG, PNG et BMP, de moins de 10 Mo
-			</p>
-			<p id="upload_cv">
-			<?php
-					echo "<form target='casier_target' id='casier_target' action='/document/upload' enctype='multipart/form-data' method='post'>";
-					echo "<input id='casier_file' style='width: 25em;' name='casier_file' type='file' ><br />";
-					echo "<input type='hidden' id='type' name='type' value='casier' >";
-					echo "<input id='casier_envoyer' type='submit' value='Envoyer'/>";
-					echo "</form>";
-					echo "<iframe id='casier_target' name='casier_target' src='#' style='width:0;height:0;border:0px solid #fff;'></iframe>";
-					echo "<p id='info_casier' style='display : none; color : green'></p>";
-					echo "<p id='error_casier' style='display : none; color : red'></p>";
-				}else
-					echo "<span style='color : green'>Vous avez déjà envoyé votre extrait de casier judiciaire</span>";
-			?>
-			</p>
+		<div id="upload_casier">
+			<div id="form_casier">
+				<?php
+					if(!$this->casier){
+				?>
+				<p>
+					Vous devez ici nous envoyer en ligne votre extrait de casier judiciaire (bulletin n°3 ; vous pouvez l'obtenir en ligne sur le site <a target="_blank" href="https://www.cjn.justice.gouv.fr/cjn/b3/eje20">www.cjn.justice.gouv.fr</a>).<br />
+	Nous acceptons les formats PDF, JPG, PNG et BMP, de moins de 10 Mo
+				</p>
+				<p>
+				<?php
+						echo "<form target='casier_target' id='casier_target' action='/document/upload' enctype='multipart/form-data' method='post'>";
+						echo "<input id='casier_file' style='width: 25em;' name='casier_file' type='file' ><br />";
+						echo "<input type='hidden' id='type' name='type' value='casier' >";
+						echo "<input id='casier_envoyer' type='submit' value='Envoyer'/>";
+						echo "</form>";
+						echo "<iframe id='casier_target' name='casier_target' src='#' style='width:0;height:0;border:0px solid #fff;'></iframe>";
+						echo "<p id='error_casier' style='display : none; color : red'></p>";
+					}else
+						echo "<span style='color : green'>Vous avez déjà envoyé votre extrait de casier judiciaire</span>";
+				?>
+				</p>
+			</div> <!-- form_casier -->
+			<p id="info_casier" style='color : green'></p>
 		</div> <!-- casier -->
 		<div id="test_motivation">
 			<?php if(!$this->test_motivation){ ?>
@@ -627,12 +633,27 @@ Nous acceptons les formats PDF, JPG, PNG et BMP, de moins de 10 Mo
 	function formUploadCallback(result, type) {
 		if(result == 1){
 			// Si tout c'est bien passé
+			$("#form_"+type).hide();
+			console.log("#form_"+type);
 			$("#info_"+type).html('Votre document à bien été envoyé');
             $("#info_"+type).show();
             setTimeout(function() {
                 $("#info_"+type).fadeOut("slow");
             }, 2000 );
             $("#onglet_"+type).css('background','#98FB98');
+
+            // On sélectionne l'onglet suivant
+            if(type == 'cv')
+            	numero_tab_selected = 1;
+            else if(type == "motivation")
+            	numero_tab_selected = 2;
+            else if(type == "casier")
+            	numero_tab_selected = 3;
+			
+			$('#contenaire_onglets').tabs({
+			selected : numero_tab_selected
+			});
+
 		}else if(result == 2){
 			// Si il y a une erreur sur la taille ou le format
 			$("#error_"+type).html('La taille ou l\'extension de votre fichier n\'est pas valide');
@@ -640,14 +661,14 @@ Nous acceptons les formats PDF, JPG, PNG et BMP, de moins de 10 Mo
             setTimeout(function() {
                 $("#error_"+type).fadeOut("slow");
             }, 2000 );
-		}else{
-			// Si il y a eu une erreur lors de l'upload
+		}else if(result == 0){
+			// Si il y a une erreur sur la taille ou le format
 			$("#error_"+type).html('La taille ou l\'extension de votre fichier n\'est pas valide');
             $("#error_"+type).show();
             setTimeout(function() {
                 $("#error_"+type).fadeOut("slow");
-            }, 2000 );		
-		}
+            }, 2000 );
+		
 		$('#loading').html('');
 	}
 	
