Ajout d'un menu supplémentaire dans la barre menu

--- a/application/views/scripts/utilisateurs/menu-connecte.phtml
+++ b/application/views/scripts/utilisateurs/menu-connecte.phtml
@@ -13,13 +13,17 @@ if($user->id_groupe == 1){
 	            <li><a href="/formateurs-a-valider">Formateurs à valider</a></li>	            
 	        </ul>
 	    </li>
+	    <li><a>Certifications</a>
+	        <ul>
+	            <li><a href="/liste-des-questions">Liste des questions</a></li>
+	            <li><a href="/liste-des-certifications">Liste des certifications</a></li>
+	            <li><a href="/liste-questions-motivation">Liste des questions de motivation</a></li>
+	        </ul>
+	    </li>
 	    <li><a>Autres actions</a>
 	        <ul>
 				<li><a href="/liste-des-groupes">Liste des groupes</a></li>
-	            <li><a href="/liste-des-questions">Liste des questions</a></li>
-	            <li><a href="/liste-des-certifications">Liste des certifications</a></li>
 	            <li><a href="/liste-des-formations">Liste des formations</a></li>
-	            <li><a href="/liste-questions-motivation">Liste des questions de motivation</a></li>
 	            <li><a href="/liste-logins-interdits">Liste des logins interdits</a></li>
 	            <li><a href="/gerer-faq">Gérer la FAQ</a></li>
 	        </ul>
